--- a/app/EventDetails.html
+++ b/app/EventDetails.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8">
     <title>Event Registration</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/app.css"/>
 </head>
-<body>
+<body ng-cloak>
 <div class="container">
     <div class="navbar">
         <div class="navbar-inner">
             <ul class="nav">
-
+                <li><a href="/NewEvent.html">Create Event</a></li>
             </ul>
         </div>
     </div>
@@ -19,13 +19,15 @@
         <img ng-src="{{event.imageUrl}}" alt="{{event.name}}" />
         <div class="row">
             <div class="span11">
-                <h2>{{event.name}}</h2>
+                <h2 ng-bind-template="{{event.name}}"></h2>
             </div>
         </div>
+
         <div class="row">
             <div class="span3">
-                <div><strong>Date: {{event.date}}</strong></div>
+                <div><strong>Date: {{event.date | date:'mediumDate'}}</strong></div>
                 <div><strong>Time: {{event.time}}</strong></div>
+                <div><strong>Price: {{ 34 | currency}}</strong></div>
             </div>
             <div class="span4">
                 <address>
@@ -39,8 +41,20 @@
         <hr />
 
         <h3>Sessions</h3>
+        Order By:
+        <select ng-model="sortorder" class="input-small">
+            <option select value="name">Name</option>
+            <option select value="-upVoteCount">Votes</option>
+        </select>
+        Show:
+        <select ng-model="query.level" class="input-medium">
+            <option selected value="">All</option>
+            <option selected value="introductory">Introductory</option>
+            <option selected value="intermediate">Intermediate</option>
+            <option selected value="advanced">Advanced</option>
+        </select>
         <ul class="thumbnails">
-            <li ng-repeat="session in event.sessions">
+            <li ng-repeat="session in event.sessions | orderBy:sortorder | filter:query">
                 <div class="row session">
                     <div class="span0 well votingWidget">
                         <div class="votingButton" ng-click="upVoteSession(session)">
@@ -56,7 +70,7 @@
                     <div class="well span9">
                         <h4 class="well-title">{{session.name}}</h4>
                         <h6 style="margin-top:-10px">{{session.creatorName}}</h6>
-                        <span>Duration: {{session.duration}}</span><br/>
+                        <span>Duration: {{session.duration | durations}}</span><br/>
                         <span>Level: {{session.level}}</span>
 
                         <p>{{session.abstract}}</p>
@@ -67,12 +81,14 @@
     </div>
 </div>
 
-<script src="lib/jquery.min.js"></script>
-<script src="lib/underscore-1.4.4.min.js"></script>
-<script src="lib/bootstrap.min.js"></script>
-<script src="lib/angular/angular.js"></script>
-<script src="js/app.js"></script>
-<script src="js/controllers/EventController.js"></script>
+<script src="/lib/jquery.min.js"></script>
+<script src="/lib/underscore-1.4.4.min.js"></script>
+<script src="/lib/bootstrap.min.js"></script>
+<script src="/lib/angular/angular.js"></script>
+<script src="/lib/angular/angular-sanitize.js"></script>
+<script src="/js/app.js"></script>
+<script src="/js/controllers/EventController.js"></script>
+<script src="/js/filters.js"></script>
 
 
 </body>
