--- a/app/EventDetails.html
+++ b/app/EventDetails.html
@@ -17,6 +17,8 @@
     </div>
     <div ng-controller="EventController" style="padding-left:20px; padding-right:20px;">
         <img ng-src="{{event.imageUrl}}" alt="{{event.name}}" />
+        <button type="button" class="btn btn-primary" ng-click="scrollToSession()">Scroll</button>
+
         <div class="row">
             <div class="span11">
                 <h2 ng-bind-template="{{event.name}}"></h2>
@@ -54,7 +56,7 @@
             <option selected value="advanced">Advanced</option>
         </select>
         <ul class="thumbnails">
-            <li ng-repeat="session in event.sessions | orderBy:sortorder | filter:query">
+            <li ng-repeat="session in event.sessions | orderBy:sortorder | filter:query" class="span11" id="session{{session.id}}">
                 <div class="row session">
                     <div class="span0 well votingWidget">
                         <div class="votingButton" ng-click="upVoteSession(session)">
@@ -85,6 +87,7 @@
 <script src="/lib/underscore-1.4.4.min.js"></script>
 <script src="/lib/bootstrap.min.js"></script>
 <script src="/lib/angular/angular.js"></script>
+<script src="/lib/angular/angular-resource.js"></script>
 <script src="/lib/angular/angular-sanitize.js"></script>
 <script src="/js/app.js"></script>
 <script src="/js/controllers/EventController.js"></script>
