--- a/app/index.html
+++ b/app/index.html
@@ -1,17 +1,16 @@
 <!doctype html>
 <html lang="en" ng-app="eventsApp">
 <head>
-    <meta charset="utf-8">
-    <title>Event Registration</title>
+    <base href="/"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body ng-cloak>
 <div class="container">
-    <div class="navbar">
+    <div class="navbar" ng-controller="MainMenuController">
         <div class="navbar-inner">
             <ul class="nav">
-                <li><a href="#/NewEvent">Create Event</a></li>
+                <li><a href="#" ng-click="createEvent()">Create Event</a></li>
             </ul>
         </div>
     </div>
@@ -25,11 +24,12 @@
 <script src="/lib/bootstrap.min.js"></script>
 <script src="/lib/angular/angular.js"></script>
 <script src="/lib/angular/angular-resource.js"></script>
-<script src="/lib/angular/angular-route.min.js"></script>
+<script src="/lib/angular/angular-route.js"></script>
 <script src="/js/app.js"></script>
 <script src="/js/controllers/EventController.js"></script>
 <script src="/js/controllers/EditEventController.js"></script>
 <script src="/js/controllers/EventListController.js"></script>
+<script src="/js/controllers/MainMenuController.js"></script>
 <script src="/js/filters.js"></script>
 <script src="/js/services/EventData.js"></script>
 <script src="/js/filters.js"></script>
