EditProfile converted to a template with appropriate routing Add resolve property to /events rout so page does not load until events have been loaded from disk

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
         <div class="navbar-inner">
             <ul class="nav">
                 <li><a href="#" ng-click="createEvent()">Create Event</a></li>
+                <li><a href="#" ng-click="editProfile()">Edit Profile</a></li>
             </ul>
         </div>
     </div>
@@ -30,8 +31,10 @@
 <script src="/js/controllers/EditEventController.js"></script>
 <script src="/js/controllers/EventListController.js"></script>
 <script src="/js/controllers/MainMenuController.js"></script>
+<script src="/js/controllers/EditProfileController.js"></script>
 <script src="/js/filters.js"></script>
 <script src="/js/services/EventData.js"></script>
+<script src="/js/services/GravatarUrlBuilder.js"></script>
 <script src="/js/filters.js"></script>
 
 
