Add title to index

--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="eventsApp">
 <head>
     <base href="/"/>
+    <title>Events</title>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/app.css"/>
 </head>
