2/3 through Module 6. Created greeting directive with its own internal controller.

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="eventsApp">
 <head>
     <base href="/"/>
-    <title>Events</title>
+    <title>Event Registration</title>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/app.css"/>
 </head>
@@ -33,6 +33,12 @@
 <script src="/js/controllers/EventListController.js"></script>
 <script src="/js/controllers/MainMenuController.js"></script>
 <script src="/js/controllers/EditProfileController.js"></script>
+<script src="/js/controllers/SampleDirectiveController.js"></script>
+<script src="/js/directives/datekeys.js"></script>
+<script src="/js/directives/gravatar.js"></script>
+<script src="/js/directives/mySample.js"></script>
+<script src="/js/directives/eventThumbnail.js"></script>
+<script src="/js/directives/upvote.js"></script>
 <script src="/js/filters.js"></script>
 <script src="/js/services/EventData.js"></script>
 <script src="/js/services/GravatarUrlBuilder.js"></script>
