Added additional directives to greeting directive.

--- a/app/DirectiveControllerSample.html
+++ b/app/DirectiveControllerSample.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-<greeting/>
+<greeting>
+    <div finnish hindi></div>
+</greeting>
 
 <script src="/lib/jquery.min.js"></script>
 <script src="/lib/angular/angular.js"></script>
