--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <title>Event Registration</title>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" href="/lib/jquery-ui-1.12.1.custom/jquery-ui.css"/>
 </head>
 <body ng-cloak>
 <div class="container">
@@ -27,6 +28,7 @@
 <script src="/lib/angular/angular.js"></script>
 <script src="/lib/angular/angular-resource.js"></script>
 <script src="/lib/angular/angular-route.js"></script>
+<script src="/lib/angular/angular-route.js"></script>
 <script src="/js/app.js"></script>
 <script src="/js/controllers/EventController.js"></script>
 <script src="/js/controllers/EditEventController.js"></script>
@@ -34,12 +36,15 @@
 <script src="/js/controllers/MainMenuController.js"></script>
 <script src="/js/controllers/EditProfileController.js"></script>
 <script src="/js/controllers/SampleDirectiveController.js"></script>
+<script src="/js/directives/collapsible.js"></script>
+<script src="/js/directives/datepicker.js"></script>
 <script src="/js/directives/datekeys.js"></script>
 <script src="/js/directives/gravatar.js"></script>
 <script src="/js/directives/mySample.js"></script>
 <script src="/js/directives/eventThumbnail.js"></script>
 <script src="/js/directives/upvote.js"></script>
 <script src="/js/filters.js"></script>
+<script src="/js/services/calendarHelper.js"></script>
 <script src="/js/services/EventData.js"></script>
 <script src="/js/services/GravatarUrlBuilder.js"></script>
 <script src="/js/filters.js"></script>
